--- a/public/main.css
+++ b/public/main.css
@@ -74,3 +74,10 @@ table tbody td {
   height: 30px;
   margin: 0 3px;
 }
+
+#messages {
+  width: 500px;
+  height: 500px;
+  overflow: scroll;
+  background: #eeeeee;
+}
